package command.simplecommand;

public class Light {
    public void on(){
        System.out.println("the light is on");
    }

    public void off(){
        System.out.println("the light is off");
    }
}
